# geometric_shapes

./: .clang-tidy  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  MIGRATION.md  README.md  config.h.in  geometric_shapes.repos  geometric_shapes_rolling.repos  package.xml  stack.xml
.github/workflows/: build_and_test.yaml  ci.yaml  format.yaml  format.yml  industrial_ci_action.yaml  industrial_ci_action.yml  prerelease.yaml
cmake/: ConfigExtras.cmake  FindQHULL.cmake  FindQhull.cmake  geometric_shapes-extras.cmake
include/geometric_shapes/: aabb.h  bodies.h  body_operations.h  check_isometry.h  console_bridge_compatibility.hpp  mesh_operations.h  obb.h  random_number_utils.hpp  shape_extents.h  shape_messages.h  shape_operations.h  shape_to_marker.h  shapes.h  solid_primitive_dims.h
src/: aabb.cpp  bodies.cpp  body_operations.cpp  mesh_operations.cpp  obb.cpp  shape_extents.cpp  shape_operations.cpp  shape_to_marker.cpp  shapes.cpp
test/: CMakeLists.txt  test_basics.cpp  test_body_operations.cpp  test_bounding_box.cpp  test_bounding_cylinder.cpp  test_bounding_sphere.cpp  test_create_mesh.cpp  test_loaded_meshes.cpp  test_point_inclusion.cpp  test_ray_intersection.cpp  test_shapes.cpp
test/resources/: box.dae  cone.stl  config.h.in  cube.stl  cylinder.stl  sphere.stl  triangle.stl  triangle_10m.dae  triangle_1m.dae  triangle_no_unit.dae  triangle_x_up.dae  triangle_y_up.dae  triangle_z_up.dae
